# tutorato_olimpiadi2021

./: .clang-format  .gitignore  CMakeLists.txt  README.md
grafi/: CMakeLists.txt  mappa.cpp  mst.cpp  ois_chores.cpp  ois_estintori.cpp  ois_excursion.cpp  ois_ponti.cpp  ois_spesa.cpp  ois_water.cpp  ponti.cpp  sentieri.cpp  sunnydale.cpp  tecla.cpp  viaggio.cpp
programmazione_dinamica/: CMakeLists.txt  domino.cpp  ioit_tombini.cpp  minato.cpp  nonna.cpp  ois_medaglie.cpp  piastrelle.cpp  poldo.cpp  preoii_treni.cpp  torri.cpp  trampolino.cpp  triangolo.cpp
terry2018/: CMakeLists.txt  antivirus.cpp  escursione.cpp  party.cpp  xray.cpp
terry2019/: CMakeLists.txt  download.cpp  gerarchie.cpp  multicore.cpp  tornello.cpp
terry2020/: CMakeLists.txt  interruttori.cpp  mostra.cpp  pesci.cpp  social.cpp
vari/: CMakeLists.txt  bottleneck.cpp  dessert.cpp  ois_atc.cpp  ois_atc2.cpp  ois_islands.cpp  ois_vapoare.cpp  topologia.cpp
